--- a/template/package.json
+++ b/template/package.json
@@ -82,6 +82,8 @@
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
     {{/e2e}}
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "opn": "^5.1.0",
